--- a/projects.org
+++ b/projects.org
@@ -97,12 +97,12 @@ created .
 :EXPORT_DATE: 2019-04-01
 :END:
 ** About the project
-"Tus Tapas Valen" is an application that will allow clients to participate in
-promotions and auctions, and win prizes. We are expecting 5 million users for
-January 2020. First I worked FrontEnd with ReactJS, Redux and redux-observable,
-but now I'm working in the Backend. I had to plan a big refactor while still
-working on new Backend functionalities. The Backend is built using Python,
-Django, PostgreSQL, AWS, and AWS S3 
+"Tus Tapas Valen" was an application that allowed clients to participate in
+promotions and auctions, and win prizes. We got to 400.000 users in the time the
+app was online. First I worked FrontEnd with ReactJS, Redux and
+redux-observable, but then I moved to the Backend. I had to plan a big
+refactor while still working on new Backend functionalities. The Backend is
+built using Python, Django, PostgreSQL, AWS, and AWS S3
 
 [[/cocacola-01.jpg]]
 [[/cocacola-02.jpg]]
