Update Termux description and lastmod timestamp
- Corrected the description of Termux to emphasize its open-source nature
- Updated the lastmod timestamp to reflect the most recent revision
- Standardized terminology from "Android terminal emulator" to "terminal emulator"

--- a/posts.org
+++ b/posts.org
@@ -1292,7 +1292,7 @@ different constraints:
   run Claude Code.
 - I self-host *ntfy* for notifications, so no need for Poke or any external
   notification service.
-- I use *Termux* on Android, not Termius on iOS.
+- I use *Termux* (open-source), not Termius.
 
 If you don't have this kind of infrastructure already, Granda's approach is
 probably simpler. But if you're the kind of person who already has a WireGuard
@@ -1311,7 +1311,7 @@ mesh and self-hosted services, this guide is for you.
 | tmux        | Session persistence                 | screen, zellij                   |
 | Claude Code | The actual work                     | —                                |
 | ntfy        | Push notifications                  | Pushover, Gotify, Poke, Telegram |
-| Termux      | Android terminal emulator           | Termius, JuiceSSH, ConnectBot    |
+| Termux      | Terminal emulator                   | Termius, JuiceSSH, ConnectBot    |
 | fish shell  | Shell on all machines               | zsh, bash                        |
 
 The key insight is that you need *two different types of resilience*: mosh
@@ -1781,8 +1781,7 @@ hop over the LAN, and the fish config on the work PC auto-attaches to tmux.
 
 If you're on iOS (or just prefer a polished app), [[https://termius.com/][Termius]] is what Granda uses.
 It supports mosh natively and has a nice UI. The downside is it's a subscription
-for the full features. Termux is free and gives you a full Linux environment, but
-it's Android-only and definitely more rough around the edges.
+for the full features. Termux is free and open-source, and gives you a full Linux environment.
 
 Other options: [[https://juicessh.com/][JuiceSSH]] (Android, no mosh), [[https://connectbot.org/][ConnectBot]] (Android, no mosh).
 Mosh support is really the killer feature here, so Termux or Termius are the
